--- a/src/assets/scss/common/_common.scss
+++ b/src/assets/scss/common/_common.scss
@@ -1795,16 +1795,27 @@ p.pagePara {
 .countryListPageMain {
   background: #F6FBFF;
 
+  input {
+    background-color: #f4f4f4;
+    border: 0.1rem solid var(--input-border-color, #fff);
+    color: #9e9e9e;
+    padding: 1rem;
+    font-size: 1.6rem;
+    border-radius: 0.5rem;
+    font-size: 1.4rem;
+    font-weight: 300;
+  }
+
 
   .countryListPage {
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 20px;
+    // display: grid;
+    // grid-template-columns: 1fr;
+    // gap: 20px;
     max-width: 70%;
     margin: auto;
 
     h2 {
-      font-size: 20x;
+      font-size: 20px;
       line-height: 1.125;
       font-weight: 600;
       letter-spacing: .004em;
